--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,36 +1,37 @@
-# This is a basic workflow to help you get started with Actions
+name: Run TAF Tests # The name of the GitHub Actions workflow
 
-name: CI
+on: # Specifies the events that trigger the workflow
+  push: # Trigger the workflow on push events
+    branches:
+      - main # Only trigger on pushes to the main branch
+  pull_request: # Trigger the workflow on pull request events
+    branches:
+      - main # Only trigger on pull requests to the main branch
 
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+jobs: # Defines the jobs to be run
+  build: # The name of the job
+    runs-on: ubuntu-latest # Specifies the type of runner to use
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    steps: # The sequence of steps to set up the environment and run the tests
+    - name: Checkout repository # Step to check out the repository
+      uses: actions/checkout@v3 # Uses the checkout action to clone the repository
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    - name: Set up JDK 22 # Step to set up JDK 22
+      uses: actions/setup-java@v3 # Uses the setup-java action to install JDK
+      with:
+        java-version: '22' # Specifies the version of JDK to install
+        distribution: 'temurin' # Specifies the distribution of JDK to use
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
+    - name: Cache Maven packages # Step to cache Maven dependencies
+      uses: actions/cache@v3 # Uses the cache action to cache dependencies
+      with:
+        path: ~/.m2 # The path to the Maven cache directory
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }} # The cache key based on the OS and the hash of the pom.xml file
+        restore-keys: |
+          ${{ runner.os }}-maven- # Restore keys for the cache
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+    - name: Install dependencies # Step to install project dependencies
+      run: mvn install -DskipTests # Runs the Maven install command without running tests
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+    - name: Run tests # Step to run the tests
+      run: mvn test # Runs the Maven test command to execute the tests
