--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -13,30 +13,33 @@ jobs: # Defines the jobs to be run
     runs-on: ubuntu-latest # Specifies the type of runner to use
 
     steps: # The sequence of steps to set up the environment and run the tests
-    - name: Checkout repository # Step to check out the repository
-      uses: actions/checkout@v3 # Uses the checkout action to clone the repository
+      - name: Checkout repository # Step to check out the repository
+        uses: actions/checkout@v3 # Uses the checkout action to clone the repository
 
-    - name: Set up JDK 22 # Step to set up JDK 22
-      uses: actions/setup-java@v3 # Uses the setup-java action to install JDK
-      with:
-        java-version: '22' # Specifies the version of JDK to install
-        distribution: 'temurin' # Specifies the distribution of JDK to use
+      - name: Set up JDK 22 # Step to set up JDK 22
+        uses: actions/setup-java@v3 # Uses the setup-java action to install JDK
+        with:
+          java-version: '22' # Specifies the version of JDK to install
+          distribution: 'temurin' # Specifies the distribution of JDK to use
 
-    - name: Cache Maven packages # Step to cache Maven dependencies
-      uses: actions/cache@v3 # Uses the cache action to cache dependencies
-      with:
-        path: ~/.m2 # The path to the Maven cache directory
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }} # The cache key based on the OS and the hash of the pom.xml file
-        restore-keys: |
-          ${{ runner.os }}-maven- # Restore keys for the cache
+      - name: Cache Maven packages # Step to cache Maven dependencies
+        uses: actions/cache@v3 # Uses the cache action to cache dependencies
+        with:
+          path: ~/.m2 # The path to the Maven cache directory
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }} # The cache key based on the OS and the hash of the pom.xml file
+          restore-keys: |
+            ${{ runner.os }}-maven- # Restore keys for the cache
 
-    - name: Install Chrome # Step to install Chrome
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y google-chrome-stable
+      - name: Setup Chrome # Step to set up Chrome
+        uses: browser-actions/setup-chrome@latest # Uses the setup-chrome action to install Chrome
 
-    - name: Install dependencies # Step to install project dependencies
-      run: mvn install -DskipTests # Runs the Maven install command without running tests
+      - name: Set Screen Resolution to 1920x1080 # Step to set the screen resolution
+        run: |
+          sudo apt-get install -y x11-utils # Install x11-utils package
+          xrandr --output $(xrandr | grep " connected" | cut -f1 -d " ") --mode 1920x1080 || echo "Screen resolution change failed" # Set the screen resolution to 1920x1080
 
-    - name: Run tests # Step to run the tests
-      run: mvn test # Runs the Maven test command to execute the tests
+      - name: Install dependencies # Step to install project dependencies
+        run: mvn install -DskipTests # Runs the Maven install command without running tests
+
+      - name: Run tests # Step to run the tests
+        run: mvn test # Runs the Maven test command to execute the tests
